--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <title>Free Web Development Resources</title>
     <meta name="description" content="This is a list of awesome web development resources. Add more!">
-    <link rel="canonical" href="https://web-dev-resources.com/" />
+    <link rel="canonical" href="https://web-dev-resources.com/">
     <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify/lib/themes/vue.css">
 </head>
 <body>
