--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 <noscript>
-    This page requires JavaScript to work, please enable it </a>.
+   <a>This page requires JavaScript to work, please enable it </a>.
 </noscript>
 <div id="app">Loading...</div>
 <script>
